# Post-Quantum-Password-Breaking-Script

./: .gitignore  .markdownlint.json  LICENSE  README.md  conversion.py  pyproject.toml  quantum_infographic.py  requirements.txt
data/: Optimised_Breakage.csv  Quantum_Data__O_SQRT_N.csv
src/quantum_file_analyzer/: __init__.py  cli.py  transform.py  utils.py  visualize.py
tests/: __init__.py  test_cli.py  test_transform.py  test_utils.py  test_visualize.py
